# ClockPuzzle

./: .gitignore  Makefile.in  README.md  configure.ac
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  circle.c  circle.h  clock_number.c  clock_number.h  clock_puzzle.ui  dependencies.h  game.c  game.h  main.c  main_window.c  main_window.h  program.c
